# ObjektnoOrijentisanoProgramiranje2Projekat

./: CMakeLists.txt  ball.cpp  ball.h  drawable.h  engine.cpp  engine.h  eventlistener.h  keyboardeventlistener.cpp  keyboardeventlistener.h  main.cpp  movable.h  objectgroup.cpp  objectgroup.h  player.cpp  player.h  sprite.cpp  sprite.h  spritesheet.cpp  spritesheet.h
resources/creatures/: sprite_sheet.txt  sprite_sheet_ball.txt
